# H24_INF155_TP02

./: README.md  equipes2022.txt  matchs2022.txt
INF155_TP02/: CMakeLists.txt  equipes2022.txt  lecture_fichiers.c  lecture_fichiers.h  main.c  phase_elimin.c  phase_elimin.h  sim_phase_grp.c  sim_phase_grp.h  stat_finales.c  stat_finales.h  structures.h
